<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <!-- Заголовок -->
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment_question"
            android:textSize="@dimen/text_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Поле ввода -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilComment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            app:counterEnabled="true"
            app:counterMaxLength="256"
            app:counterTextAppearance="@style/CounterText"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="256"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Кнопки навигации -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilComment"
            android:layout_marginTop="@dimen/large_margin">

            <Button
                android:id="@+id/btnBack"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/back"/>

            <Button
                android:id="@+id/btnNext"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:text="@string/to_next_page"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>