<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <!-- Заголовок -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pressure_question"
            android:textSize="@dimen/text_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Утреннее давление -->
        <TextView
            android:id="@+id/tvMorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning_pressure"
            android:textSize="@dimen/text_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:layout_marginTop="@dimen/large_margin"/>

        <LinearLayout
            android:id="@+id/morningContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/tvMorning">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/morningLayout"
                style="@style/PressureInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/upper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMorningUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/PressureInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/default_margin"
                android:hint="@string/lower">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMorningDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Вечернее давление -->
        <TextView
            android:id="@+id/tvEvening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening_pressure"
            android:textSize="@dimen/text_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/morningContainer"
            android:layout_marginTop="@dimen/large_margin"/>

        <LinearLayout
            android:id="@+id/eveningContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/tvEvening">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/PressureInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/upper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEveningUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/PressureInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/default_margin"
                android:hint="@string/lower">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEveningDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Кнопки навигации -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eveningContainer"
            android:layout_marginTop="@dimen/large_margin">

            <Button
                android:id="@+id/btnBack"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/back"/>

            <Button
                android:id="@+id/btnNext"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:text="@string/to_next_page"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>